# notebook-playground

./: README.md  pyproject.toml
src/: calculus-practical-1.ipynb  survey-data.ipynb
src/assets/: survey.csv
