[project]
name = "notebook-playground"
version = "0.1.0"
description = "notebook-playground is a collection of Jupyter notebooks for data analysis and visualization."
authors = [
    { name = "Destin Ecarma", email = "109215379+DestinEcarma@users.noreply.github.com" }
]
dependencies = [
    "numpy>=2.2.3",
    "notebook>=7.3.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "matplotlib>=3.10.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
